[gd_scene load_steps=6 format=3 uid="uid://cavlfqqc5cnml"]

[ext_resource type="Script" uid="uid://qrxc241vxfme" path="res://entities/npcs/lebron.gd" id="1_iirex"]
[ext_resource type="Texture2D" uid="uid://dncg1rrqy45e7" path="res://assets/npcs/NPC.jpg" id="1_yctku"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yctku"]
radius = 74.0068

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iirex"]
size = Vector2(18, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oyst7"]
size = Vector2(20, 40)

[node name="Lebron" type="CharacterBody2D"]
position = Vector2(1, 0)
script = ExtResource("1_iirex")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.605195, -17)
scale = Vector2(0.124675, 0.270833)
texture = ExtResource("1_yctku")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_yctku")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_iirex")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_oyst7")

[node name="take_dmg_cd" type="Timer" parent="."]

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_dmg_cd" to="." method="_on_take_dmg_cd_timeout"]
